<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="str_player_replay">重新播放</string>
    <string name="str_player_lock_tip">请先解锁屏幕！</string>
    <string name="str_player_unlocked">已解锁</string>
    <string name="str_player_locked">已锁定</string>
    <string name="str_player_error_message">出了点小问题，请稍后重试</string>
    <string name="str_player_retry"> 重    试 </string>
    <string name="str_player_continue_play">继续播放</string>
    <string name="str_player_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="str_player_time_percent">%1$s/%2$s</string>
    <string name="str_player_select_list">选集</string>
    <string name="str_player_speed">倍速</string>
    <string name="str_player_definition">清晰度</string>
    <string name="str_player_speed05">0.5</string>
    <string name="str_player_speed75">0.75</string>
    <string name="str_player_speed100">1.0</string>
    <string name="str_player_speed125">1.25</string>
    <string name="str_player_speed150">1.5</string>
    <string name="str_player_speed200">2.0</string>
    <string name="str_player_list_size">选集 (%1$d)</string>

    <string-array name="group_urls">
        <item>https://downs.muzhiwan.com/2019/06/19/com.and.games505.TerrariaPaid5d0a074e451c0.gpk</item>
        <item>https://downs.muzhiwan.com/2017/03/28/com.xyzstudio_58da07426e959.apk</item>
    </string-array>
</resources>
