<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#CD000000">

        <RadioGroup
            android:id="@+id/ll_full_definition_contain"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_centerInParent="true"
            android:minHeight="220dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/speed_05"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/dimen_player_controller_icon_padding_b"
                android:text="@string/str_player_speed05"
                android:textColor="@color/player_selector_speed_choice"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/speed_075"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/dimen_player_controller_icon_padding_b"
                android:text="@string/str_player_speed75"
                android:textColor="@color/player_selector_speed_choice"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/speed_10"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/dimen_player_controller_icon_padding_b"
                android:text="@string/str_player_speed100"
                android:textColor="@color/player_selector_speed_choice"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/speed_125"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/dimen_player_controller_icon_padding_b"
                android:text="@string/str_player_speed125"
                android:textColor="@color/player_selector_speed_choice"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/speed_15"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:padding="@dimen/dimen_player_controller_icon_padding_b"
                android:text="@string/str_player_speed150"
                android:textColor="@color/player_selector_speed_choice"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/speed_20"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:padding="@dimen/dimen_player_controller_icon_padding_b"
                android:text="@string/str_player_speed200"
                android:textColor="@color/player_selector_speed_choice"
                android:textSize="14sp" />

        </RadioGroup>
    </RelativeLayout>

</RelativeLayout>