<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--   竖屏   -->
    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_player_controller_height"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/player_shape_stardard_controller_bottom_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        android:visibility="visible"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="@dimen/dimen_player_controller_height"
            android:layout_height="@dimen/dimen_player_controller_height"
            android:padding="@dimen/dimen_player_controller_icon_padding"
            android:scaleType="centerInside"
            android:src="@drawable/player_selector_play_button" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:max="1000"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progressDrawable="@drawable/player_layer_progress_bar"
            android:thumb="@drawable/player_seekbar_thumb"
            android:thumbOffset="0dp" />

        <TextView
            android:id="@+id/player_time_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_player_controller_vod_time_text_size"
            tools:text="00:00/00:00" />

        <ImageView
            android:id="@+id/fullscreen"
            android:layout_width="@dimen/dimen_player_controller_height"
            android:layout_height="@dimen/dimen_player_controller_height"
            android:paddingLeft="5dp"
            android:paddingTop="@dimen/dimen_player_controller_icon_padding"
            android:paddingBottom="@dimen/dimen_player_controller_icon_padding"
            android:scaleType="centerInside"
            android:src="@drawable/ic_player_fullscreen"
            android:visibility="visible" />
    </LinearLayout>


    <!--   横屏   -->
    <LinearLayout
        android:id="@+id/bottom_container_vod_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/player_shape_stardard_controller_bottom_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        android:paddingBottom="@dimen/dimen_player_controller_icon_padding">

        <SeekBar
            android:id="@+id/seekBar_vod_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:max="1000"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:paddingStart="10dp"
            android:paddingLeft="15dp"
            android:paddingEnd="10dp"
            android:paddingRight="15dp"
            android:progressDrawable="@drawable/player_layer_progress_bar"
            android:thumb="@drawable/player_seekbar_thumb"
            android:thumbOffset="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_player_controller_icon_padding_s"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_vod_full_play"
                android:layout_width="@dimen/dimen_player_controller_vod_height_full"
                android:layout_height="@dimen/dimen_player_controller_vod_height_full"
                android:padding="@dimen/dimen_player_controller_icon_padding_s"
                android:scaleType="centerInside"
                android:src="@drawable/player_selector_play_button" />

            <ImageView
                android:id="@+id/iv_vod_full_play_previous"
                android:layout_width="@dimen/dimen_player_controller_vod_height_full"
                android:layout_height="@dimen/dimen_player_controller_vod_height_full"
                android:layout_marginLeft="@dimen/dimen_player_controller_icon_padding"
                android:layout_marginRight="@dimen/dimen_player_controller_icon_padding"
                android:padding="@dimen/dimen_player_controller_icon_padding_s"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_player_list_previous"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/iv_vod_full_play_next"
                android:layout_width="@dimen/dimen_player_controller_vod_height_full"
                android:layout_height="@dimen/dimen_player_controller_vod_height_full"
                android:padding="@dimen/dimen_player_controller_icon_padding_s"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_player_list_next"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_vod_full_time_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_player_controller_icon_padding_b"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_player_controller_vod_time_text_size_full"
                tools:text="00:00/00:00" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_vod_full_select_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_player_controller_icon_padding_b"
                android:padding="@dimen/dimen_player_controller_icon_padding_s"
                android:text="@string/str_player_select_list"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_player_controller_vod_time_text_size_full"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_vod_full_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_player_controller_icon_padding_b"
                android:padding="@dimen/dimen_player_controller_icon_padding_s"
                android:text="@string/str_player_speed"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_player_controller_vod_time_text_size_full" />

            <TextView
                android:id="@+id/tv_vod_full_definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_player_controller_icon_padding_s"
                android:text="@string/str_player_definition"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_player_controller_vod_time_text_size_full"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/bottom_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal|bottom"
        android:max="1000"
        android:progressDrawable="@drawable/player_layer_progress_bar"
        android:visibility="gone"
        tools:layout_height="10dp"
        tools:visibility="visible" />

</FrameLayout>